package org.example.backendwakandaresiduos.model;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class PuntoLimpioDTO {
    private Long id;
    private String ubicacion;
    private String tiposAceptados;
}
